--- a/src/components/Footer/footer.styles.css
+++ b/src/components/Footer/footer.styles.css
@@ -1,5 +1,5 @@
 .footer {
-    background: rgb(250, 250, 199);
+    background: rgba(255, 34, 34, 0.9);
     color: black;
     text-align: center;
     height: 50px;
