--- a/src/components/Header/header.styles.css
+++ b/src/components/Header/header.styles.css
@@ -7,15 +7,18 @@
 
 .header div {
     max-width: 100%;
-    
+    height: 200px;
 }
 
 
 
 
-.teste2 {    
-    max-width: 100%;
-    height: 150px;
+.grafismo {    
+    width: 100%;
+    border: 5.5px solid black;
+    
+   
+    
     
     
    
