--- a/src/pages/Artistas/artistas.styles.css
+++ b/src/pages/Artistas/artistas.styles.css
@@ -1,8 +1,5 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    list-style: none;
+    margin: 0px;
 }
 
 #titulo {
@@ -14,18 +11,24 @@
 }
 
 .pankararu {
-    display:inline-flexbox;
-    
     color: black;
-    margin: 20px;
-    padding: 30px;
-    font-size: 30px;
-    width: 400px;
+    font-size: 20px;
+    margin: 50px;
+    background-color: blueviolet;
+    
+
+}
+
+
+.span-destaque {
+    font-weight: bold;
+    font-style: italic;
 }
 
 .teste {
-    max-width: 100%;
+    
     margin-top: 30px;
-    padding: 30px;
+    border: 5px solid;
     border-radius: 400px;
+    width: 360px;
 }
