atualizando componente menu

--- a/src/components/Footer/footer.styles.css
+++ b/src/components/Footer/footer.styles.css
@@ -1,6 +1,6 @@
 .footer {
-    background: rgba(255, 34, 34, 0.9);
-    color: black;
+    background: rgb(10, 10, 10);
+    color: #fff;
     text-align: center;
     height: 50px;
     left: 0;
