--- a/src/components/Menu/menu.styles.css
+++ b/src/components/Menu/menu.styles.css
@@ -6,14 +6,15 @@
 }
 
 .navbar {
-    display: flex;
-    
-    justify-content: space-evenly;
+    display: flex;    
+    justify-content: space-between;
     overflow: hidden;
     background-color:rgb(10, 10, 10);
-    font-size: 28px;
+    font-size: 20px;
     font-weight: bold;
     padding: 20px;
+    width: 100%;
+    height: 80px;
     
 }
 
@@ -24,10 +25,26 @@
     align-items: flex-end;
 }
 
+.menu__rotas {
+    display: flex;
+    justify-content: space-between;
+    margin: 5px;
+    
+}
+
 .link:hover{
-    background-color:  rgb(117, 83, 146);
+    background-color: rgb(179, 178, 177);
 }
 
 ul li{
     list-style: none;
+}
+
+.menu__logo {
+    height: 60px;
+    padding-top: 0;
+    align-items: center;
+    justify-content: center;
+    margin: 0px;
+    margin-bottom: 20px;
 }
