--- a/src/pages/Home/home.styles.css
+++ b/src/pages/Home/home.styles.css
@@ -21,3 +21,9 @@ main {
     font-weight: bold;
     font-style: italic;
 }
+
+.subtitulos {
+    font-size: 20px;
+    font-style: italic;
+    
+}
