--- a/src/components/Footer/footer.styles.css
+++ b/src/components/Footer/footer.styles.css
@@ -1,11 +1,25 @@
-.footer {
-    background: rgb(10, 10, 10);
-    color: #fff;
-    text-align: center;
-    height: 50px;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    padding-top: 10px;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     
+}
+
+.container {
+    color:blanchedalmond;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 10px;    
+    gap: 20px; 
+    background-color: black;
+    width: 100%;
+    height: 50px;
+    
+}
+
+.footer__link:hover {
+    display: flex;
+    background-color: rgb(179, 178, 177);
+   
 }
