--- a/src/pages/Home/home.styles.css
+++ b/src/pages/Home/home.styles.css
@@ -7,16 +7,60 @@ body{
 }
 
 main {
-    
+    display: flex;
+    justify-content: center;
+    width: 100%;
     max-height: 100%;
+    
+
+    
+}
+.card-introducao{
+    width: 100%;
+    padding: 2rem 2rem;
+    margin: 0 auto;  
+    background-color: rgb(252, 248, 244);
+    font-size: 20px;
+    margin: 50px;
+}
+
+.bg {
+    background-image: url("../../assets/diario_kripo_julianaxukuru.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    opacity: 0.6;
 }
 
 .titulo {
     display: flex;
     justify-content: center;
-    margin: 30px 40px;
     font-size: 25px;
+    margin: 0px;
+    color:rgb(180, 0, 0)
 }
+
+.p__home {
+    display: flex;
+    justify-content: center;    
+    font-weight: 500;
+    font-weight: bold;
+    font-style: italic;
+    color:rgb(180, 0, 0)
+}
+
+h2{
+
+    margin: 30px;
+    font-weight: 500;
+    font-weight: bold;
+    font-style: italic;
+    color: rgb(109, 2, 2)
+
+}
+
+
 .span-destaque {
     font-weight: bold;
     font-style: italic;
