--- a/src/pages/Contato/contato.styles.css
+++ b/src/pages/Contato/contato.styles.css
@@ -2,6 +2,13 @@
     margin: 0px;
 }
 
+.texto-destaque{
+    width: 50%;
+    margin: 0 auto;
+    align-items: center;
+    text-align: center;
+}
+
 .titulo {
     display: flex;
     justify-content: center;
@@ -9,30 +16,32 @@
     font-size: 25px;
     color:rgb(180, 0, 0)
 }
+
 .span-destaque {
     font-weight: bold;
-    font-style: italic;
 }
 
 .formulario {
-    display: flex;
-    flex-wrap: wrap;
-    
+    display: grid;
+    justify-content: center;
     width: 50%;
-    border: none;
-    background-color: darkgrey;
-    justify-content: center;
-}
-.campo-form {
-    max-width: 100%;
-    justify-content: center;
+    margin: 70px auto;
+    padding: 20px;
+    box-shadow: 1px 1px 42px #000;
+    border-radius: 20px;
 }
 
+.campo-form {
+    text-align: center;
+}
 
 label {
     display: block;
-    margin: 30px 0 10px 0;
-    
+    margin:10px;
+}
+
+input{
+    padding: 7px;
 }
 
 input textarea select {
@@ -40,7 +49,10 @@ input textarea select {
     padding: 15px;
     border: 2px solid black;
     border-radius: 4px;
+}
 
+select{
+    padding: 10px;
 }
 
 p {
@@ -55,7 +67,6 @@ a {
     border-radius: 10px;
     transition: 0.5s all;
     padding: 6px;
-    
 }
 
 a:hover{
@@ -65,13 +76,12 @@ a:hover{
 
 .span-contato {
     font-weight: bold;
-    font-style: italic;
     color: rgb(109, 2, 2)
 }
 
 button {
     display: block;
-    margin: 30px 0 10px 0;
+    margin: 20px auto;
     padding: 10px 20px;
     background-color:rgb(172, 0, 0);;
     color: rgb(14, 0, 0);
@@ -79,6 +89,5 @@ button {
     cursor: pointer;
     border: none;
     border-radius: 4px;
-
 }
 
