--- a/src/components/Menu/menu.styles.css
+++ b/src/components/Menu/menu.styles.css
@@ -1,3 +1,5 @@
+
+
 *{
     margin: 0;
     padding: 0;
@@ -15,7 +17,7 @@
     font-weight: bold; 
     padding: 20px;
     width: 100%;
-    height: 80px;
+    height: 100px;
     
 }
 
@@ -37,18 +39,21 @@
 
 .link:hover{
     background-color: rgb(179, 178, 177);
-    transform: scale(1.1);
+    transform: scale(1.2);
 }
 
 ul li{
     list-style: none;
+    font-family: 'Roboto', sans-serif;
+    
 }
 
 .menu__logo {
-    height: 60px;
+    height: 212px;
     padding-top: 0;
     align-items: center;
     justify-content: center;
     margin: 0px;
     margin-bottom: 20px;
+    padding-bottom: 15px;
 }
