--- a/src/pages/Contato/contato.styles.css
+++ b/src/pages/Contato/contato.styles.css
@@ -21,6 +21,10 @@
     font-weight: bold;
 }
 
+.span__contato {
+    font-weight: bolder;
+}
+
 .formulario {
     display: grid;
     justify-content: center;
@@ -38,17 +42,19 @@
 label {
     display: block;
     margin:10px;
+    font-weight: bold;
 }
 
 input{
     padding: 7px;
+    border-radius: 10px;
 }
 
 input textarea select {
     font-size: 18px;
     padding: 15px;
-    border: 2px solid black;
-    border-radius: 4px;
+    /*border: 4px solid black;*/
+    
 }
 
 select{
@@ -83,11 +89,13 @@ button {
     display: block;
     margin: 20px auto;
     padding: 10px 20px;
-    background-color:rgb(172, 0, 0);;
+    background-color:rgb(172, 0, 0);
     color: rgb(14, 0, 0);
     font-weight: bolder;
+    font-size: 15px;
     cursor: pointer;
     border: none;
     border-radius: 4px;
+    
 }
 
