--- a/src/pages/Home/home.styles.css
+++ b/src/pages/Home/home.styles.css
@@ -13,6 +13,14 @@ main {
     max-height: 100%;
 }
 
+.titulo {
+    display: flex;
+    justify-content: center;
+    font-size: 25px;
+    margin: 0px;
+    color:rgb(180, 0, 0)
+}
+
 .card-introducao{
     width: 100%;
     padding: 2rem 2rem;
@@ -28,6 +36,29 @@ main {
     background-attachment: fixed; 
 }
 
+.p__manifesto {
+    width: 20%;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1;
+    justify-content: center;
+    text-align: center;
+    font-weight: bold;
+    padding: 30px 0 30px 0;
+    
+
+}
+.img__manifesto {
+    display: flex;
+    justify-content: center;
+}
+
+.img__manifesto img {
+    height: 80px;
+}
+
+
+
 .container-texto-paragrafos {
     width: 70%;
     margin: 0 auto;
@@ -37,18 +68,35 @@ main {
     text-align: justify;
 }
 
-.titulo {
-    display: flex;
-    justify-content: center;
-    font-size: 25px;
-    margin: 0px;
-    color:rgb(180, 0, 0)
-}
+
 
 .povos{
     background-color: rgba(109, 2, 2, 0.774);
     margin: 20px auto;
-    width: 80%;
+    width: 50%;
+    border-radius: 15px;
+}
+
+
+/* .card-povos{
+    display: flex;
+    justify-content: space-between;
+} */
+
+.h2__povos{
+    margin: 30px;
+    padding-top: 15px;
+    font-size: 25px;    
+    font-weight: bold;
+    color: #fff;
+}
+
+
+.povos p {
+    color:rgb(252, 248, 244);
+    text-align: justify;
+    padding: 0 0 15px 0;
+    font-size: 18px    
 }
 
 .span__home {
@@ -56,12 +104,6 @@ main {
     font-weight: bold;
 }
 
-h2{
-    margin: 30px;
-    font-weight: 500;
-    font-weight: bold;
-    color: #fff;
-}
 
 .span-destaque {
     font-weight: bold;
