--- a/src/pages/Obras/obras.styles.css
+++ b/src/pages/Obras/obras.styles.css
@@ -25,12 +25,14 @@
     flex-wrap: wrap;
     padding: 9% 0% 0% 9%;
     justify-content: center;
+    
 }
 
 .obras-arte {
     width: 300px;
     height: 400px;
-    margin: 10px
+    margin: 10px;
+    
 
 }
 
@@ -40,6 +42,7 @@
     flex-direction: column;
     width: 400px; 
     margin:5%;
+    
 }
 
 .esculturas__imagem {
@@ -47,7 +50,8 @@
     width: 200px;
     height: 200px;
     border-radius: 100px;
-    border: 4px solid rgb(65, 0, 0);
+    border: 5px solid rgb(65, 0, 0);
+    
 }
 
 
