--- a/src/components/Footer/footer.styles.css
+++ b/src/components/Footer/footer.styles.css
@@ -6,17 +6,25 @@
 
 .container {
     color:blanchedalmond;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding: 10px;    
-    gap: 20px; 
+    align-items: center;
+    text-align: center;
+    /* display: flex;
+    flex-wrap: wrap; */
+    /* justify-content: center; */
+    padding: 10px;
+    /* gap: 20px;  */
     background-color: black;
     width: 100%;
     height: 50px;
+    
 }
 
-.footer__link:hover {
+.footer__link, span{
+    margin: 5px auto;
+    padding: 10px;
+}
+
+/*.footer__link:hover {
     display: flex;
     background-color: rgb(179, 178, 177);
-}
+}*/
