--- a/src/pages/Artistas/artistas.styles.css
+++ b/src/pages/Artistas/artistas.styles.css
@@ -18,28 +18,44 @@
     font-weight: bold;
 }
 
-.container__artistas {
-    width: 70%;
-    margin: 0 auto;
-    /*display: flex;
-    flex-wrap: wrap;
-    /*grid-template-columns: 1;*/
-    justify-content: center;
-    text-align: justify;
-    /*margin: 50px;
-    background-color: blueviolet;*/
-    
 
-}   
+.container__artistas {
+    display: flex;    
+    flex-wrap: wrap;  
+    justify-content: center;
+    width: 50%;
+    margin: 70px auto;
+    padding: 20px;
+    box-shadow: 1px 1px 42px #000;
+    border-radius: 20px;
+}
 
 .img__artista {
     
     justify-content: center;
-    text-align: center;    
+    text-align: center;  
     margin-top: 30px;
     border: 4px solid rgb(65, 0, 0);
     box-shadow: 0 0 15px rgb(32, 0, 0);
     border-radius: 400px;
     width: 200px;
     align-items: center;
+}
+
+.botao__artista {
+    color:#ac0000;
+    background-color:rgb(221, 217, 217);
+    border: none;
+    border-radius: 5px;
+    padding: 10 px 20px;
+   
+    /*padding: 12px;
+    padding-top: 10px;
+    padding-bottom: 10px;*/
+    
+}
+
+.botao__artista:hover {
+    background-color:rgb(248, 247, 247);
+    transform: scale(1.2);
 }
