--- a/src/pages/Home/home.styles.css
+++ b/src/pages/Home/home.styles.css
@@ -2,9 +2,9 @@
     margin: 0px;
 }
 
-body{
+/* body{
     background-color:#fff;
-}
+} */
 
 main {
     display: flex;
@@ -22,7 +22,6 @@ main {
 }
 
 .card-introducao{
-    width: 100%;
     padding: 2rem 2rem;
     margin: 0 auto;  
     background-color: rgb(252, 248, 244);
@@ -68,27 +67,45 @@ main {
     text-align: justify;
 }
 
+.container-texto {
+    width: 70%;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1;
+    justify-content: center;
+    text-align: justify; 
+}
 
+.card-povos{
+    margin: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 30px;
+    width: 80%;
+    align-items: center;
+
+} 
 
 .povos{
     background-color: rgba(109, 2, 2, 0.774);
-    margin: 20px auto;
+    height: 100px;
+    width: 200px;
+    border-radius: 10px;
+    padding: 8px;
+    /*margin: 20px auto;
     width: 50%;
-    border-radius: 15px;
+    border-radius: 15px;*/
 }
-
-
-/* .card-povos{
-    display: flex;
-    justify-content: space-between;
-} */
 
 .h2__povos{
     margin: 30px;
-    padding-top: 15px;
+    padding: 15px 0 15px 0;
     font-size: 25px;    
     font-weight: bold;
     color: #fff;
+    text-align: center;
+    
 }
 
 
@@ -100,7 +117,6 @@ main {
 }
 
 .span__home {
-    color: rgb(180, 0, 0);
     font-weight: bold;
 }
 
